# NS-Monument-Retrieval

./: .gitignore  README.md  build_database.py  build_model.py  pyproject.toml  train.ipynb  utils.py
landmarks_data/train_dataset/: label_to_landmark.csv
