[project]
name = "sculpture-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
